# rag-from-scratch

./: .gitignore  pyproject.toml
src/: RAG And Long Context LLMs.pptx  agentic_chunker.py  ark_embedding.py  rag_from_scratch_10_and_11.ipynb  rag_from_scratch_12_and_14.ipynb  rag_from_scratch_15_to_18.ipynb  rag_from_scratch_1_to_4.ipynb  rag_from_scratch_5_to_9.ipynb  rag_from_scratch_chunking.ipynb  rag_fusion.py
