[project]
name = "rag-from-scratch"
version = "0.1.0"
description = "rag-from-scratch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4",
    "ipython",
    "ipykernel",
    "langchain",
    "langchain-openai",
    "langchain-anthropic",
    "langchain_community",
    "tiktoken",
    "chromadb",
    "langchainhub",
    "youtube-transcript-api>=1.2.2",
    "pytube>=15.0.0",
    "lark>=1.3.0",
    "notebook>=7.4.7",
    "unstructured>=0.18.20",
    "pdfminer-six>=20251107",
    "pi-heif>=1.1.1",
    "unstructured-inference>=1.1.1",
    "pdf2image>=1.17.0",
    "unstructured-pytesseract>=0.3.15",
    "scikit-learn>=1.7.2",
    "langchain-experimental>=0.3.4",
    "sentence-transformers>=5.1.2",
    "faiss-cpu>=1.13.0",
    "tenacity>=9.1.2",
    "umap-learn==0.5.5",
    "ragatouille>=0.0.9.post2",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"
